# lzr_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: joystick.h  sd_rec.h  servo.h  utils.h
src/: hw_config.c  joystick.c  joystick.cpp  main.c  main.cpp  sd_rec.c  servo.c  servo.cpp  utils.c
upy/: main.py
